<resources>
    <string name="app_name">Eje4_ComponentesDinamicamente</string>
    <string name="validar">Validar</string>
    <string name="introduce_contrase_a">Introduce Contraseña</string>
    <string name="dado">dado</string>
    <string name="mostrar_contrase_a">Mostrar Contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="borrar">Borrar</string>
</resources>