<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contrase_a" />

    <EditText
        android:id="@+id/etnp_Contrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/introduce_contrase_a"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <TextView
        android:id="@+id/tv_Muestra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="1"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/b_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="2" />

        <Button
            android:id="@+id/b_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="3" />

        <Button
            android:id="@+id/b_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="4" />

        <Button
            android:id="@+id/b_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="6" />

        <Button
            android:id="@+id/b_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="7" />

        <Button
            android:id="@+id/b_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="8" />

        <Button
            android:id="@+id/b_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="9" />

        <Button
            android:id="@+id/b_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_Mostrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mostrar_contrase_a" />

        <Button
            android:id="@+id/b_Validar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/validar" />

        <ImageButton
            android:id="@+id/ib_Dado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/dado"
            app:srcCompat="@drawable/dado" />

    </LinearLayout>

    <Button
        android:id="@+id/b_Borrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrar" />

    <TextView
        android:id="@+id/tv_ValidaInvalida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />
</LinearLayout>